--- a/package.json
+++ b/package.json
@@ -19,24 +19,19 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
-  "peerDependencies": {
-    "@radix-ui/react-accordion": "^1.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwind-variants": "^0.1.0"
-  },
   "devDependencies": {
+    "@styleshift/utils": "github:styleshift/utils",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.2",
+    "clsx": "^2.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.4.2",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
-    "clsx": "^2.1.1",
     "typescript": "^5.7.2"
   },
   "author": "Jeroen Gerits <jeroen@gerits.email>",
