--- a/package.json
+++ b/package.json
@@ -14,23 +14,13 @@
     "dev": "tsup --watch",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
-    "clean": "rm -rf dist node_modules/.cache coverage",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "clean": "rm -rf dist node_modules/.cache coverage"
   },
   "devDependencies": {
     "@styleshift/utils": "github:styleshift/utils",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.2",
     "clsx": "^2.1.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.4.2",
-    "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   },
