--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clean": "rm -rf dist node_modules/.cache coverage"
   },
   "devDependencies": {
+    "@radix-ui/react-accordion": "^1.2.2",
     "@styleshift/utils": "github:styleshift/utils",
     "@types/react": "^19.0.2",
     "clsx": "^2.1.1",
