--- a/package.json
+++ b/package.json
@@ -14,20 +14,19 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "typecheck": "tsc --noEmit",
-    "format": "prettier --write .",
-    "clean": "rm -rf dist node_modules/.cache coverage"
+    "format": "prettier --write ."
   },
   "peerDependencies": {
     "lucide-react": "^0.469.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@types/react": "^19.0.2",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@radix-ui/react-accordion": "^1.2.2",
     "@styleshift/utils": "github:styleshift/utils",
-    "@types/react": "^19.0.2",
     "prettier": "^3.4.2",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
+    "tsup": "^8.3.5"
   }
 }
