--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "format": "prettier --write ."
   },
   "peerDependencies": {
-    "@types/react": "^19.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@types/react": "^18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwind-variants": "^0.1.0"
   },
   "devDependencies": {
     "lucide-react": "^0.469.0",
     "typescript": "^5.7.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "prettier": "^3.4.2",
-    "tailwind-variants": "^0.3.0",
-    "tsup": "^8.3.5"
+    "tailwind-variants": "^0.1.0",
+    "tsup": "^8.3.5",
+    "@types/node": "^20.0.0",
+    "tailwind-merge": "^2.0.0",
+    "class-variance-authority": "^0.7.0"
   }
 }
